themes/default/dynamic/screen.css
html, body {
    height: 100%;
}

#kronolithPrintHeader {
    display: none;
}

#kronolithToday {
    font-weight: bold;
}

.kronolithSeparator {
    padding-left: 5px;
    padding-right: 5px;
    color: #808080;
}

.kronolithDatePicker {
    cursor: pointer;
    width: 16px;
    height: 16px;
    vertical-align: middle;
}

.kronolithColorPicker img {
    width: 16px;
    height: 16px;
    vertical-align: middle;
}

/* Loading spinner */
.kronolithLoading {
    position: absolute;
    left: 0;
    z-index: 1;
}
#kronolithLoadingday, #kronolithLoadingmonth,
#kronolithLoadingweek, #kronolithLoadingworkweek {
    top: 0;
}
#kronolithLoadingtasks, #kronolithLoadingagenda {
    display: inline-block;
    position: relative;
    top: 5px;
}
#kronolithLoading, #kronolithFBLoading {
    background: transparent url("../graphics/loading.gif") no-repeat 4px 3px;
    width: 22px;
    height: 22px;
    opacity: 0.5;
}
#kronolithFBLoading {
    position: absolute;
    top: 65px;
    border: none;
}

/* Main area */
#kronolithMain {
    clear: both;
    height: 100%;
}

/* Left menu column */
#kronolithMenu {
    position: absolute;
    top: 280px;
    bottom: 0;
    width: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    padding-top: 2px;
}
#kronolithMenuCalendars {
    padding-bottom: 10px;
}
#kronolithLoadingCalendars {
    padding-left: 10px;
}
.horde-new-extra {
    background: none;
}
.horde-new-extra a {
    background-repeat: no-repeat;
}
#kronolithQuickEvent {
    background-image: url("../graphics/new.png");
}
#kronolithQuickEvent.kronolithNewTask {
    background-image: url("../graphics/new_task.png");
}
#horde-sidebar div.horde-resources .horde-resource-edit-000,
#horde-sidebar div.horde-resources .horde-resource-edit-fff {
    margin-right: 5px;
}
/* @todo move to horde. */
#horde-sidebar div.horde-resources .horde-resource-refresh-000,
#horde-sidebar div.horde-resources .horde-resource-refresh-fff {
    float: right;
    display: block;
    background-color: transparent;
    background-image: url("../graphics/refresh-sidebar-000.png");
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 16px 16px;
    margin: 2px 10px 0 0;
    width: 17px;
    height: 17px;
    text-indent: -10000px;
    overflow: hidden;
    cursor: pointer;
}
#horde-sidebar div.horde-resources .horde-resource-refresh-fff {
    background-image: url("../graphics/refresh-sidebar-fff.png");
}

/* Quick edit */
#kronolithQuickinsert {
    line-height: 2em;
}

.kronolithDialogWarning, .kronolithDialogInfo {
    background: transparent url("../graphics/alerts/warning.png") left 2px no-repeat;
    padding: 3px 0 0 23px;
    min-height: 17px;
}
.kronolithDialogInfo {
    background-image: url("../graphics/alerts/message.png");
    font-style: italic;
}
span.kronolithDialogWarning {
    background-position: left -1px;
}
.kronolithDialogWarning strong {
    color: #f00;
}

/* Calendar form dialogs */
.kronolithCPAdvancedMore {
    max-height: 300px;
    overflow-y: auto;
}
.kronolithCPAdvanced th:first-child {
    width: 220px;
}

/* Event/task form dialogs */
.kronolithDialog {
    width: 710px;
    padding: 10px 20px;
    border: 1px #999 solid;
}
#RB_window .kronolithDialog p {
    margin-bottom: 5px;
    overflow: visible;
}
#RB_window .kronolithDialog .kronolithTabsOption p:last-child {
    margin-bottom: 0;
}
.kronolithDialog td {
    padding-right: 10px;
    vertical-align: top;
}
.kronolithDialog label {
    font-weight: bold;
}
.kronolithDialog input {
    vertical-align: middle;
    line-height: normal;
}
.kronolithDialog input:focus,
.kronolithDialog textarea:focus,
.kronolithDialog select:focus {
    border-color: #d0d0d0;
}
.kronolithLongField,
#kronolithEventTitle,
#kronolithTaskTitle,
#kronolithCalendarinternalName,
#kronolithCalendartasklistsName,
#kronolithCalendarremoteUrl,
#kronolithCalendarremoteUsername,
#kronolithCalendarremotePassword,
#kronolithCalendarremoteName,
#kronolithCalendarresourceName,
#kronolithCalendarresourcegroupName {
    width: 99%;
}

div.kronolithFormActions {
    margin: 5px 0;
}

#kronolithEventStartDate, #kronolithEventStartTime, #kronolithEventEndDate, #kronolithEventEndTime, #kronolithTaskDueDate, #kronolithTaskDueTime, .kronolithEventValue {
    text-align: center;
}
#kronolithEventLocation {
    width: 300px;
}
.kronolithTopTags {
    max-height: 75px;
    overflow: auto;
    line-height: 20px;
}
ul.horde-tags li:hover {
    background-color: #ffc;
    cursor: pointer;
}

.kronolithDialog .tabset {
    background: none;
    float: none;
    margin: 15px 0 0;
    min-height: inherit;
    width: auto;
}
#RB_window .kronolithDialog .tabset ul {
    float: left;
    margin: 0;
}
.kronolithDialog .tabset li {
    margin-top: 0;
}
.kronolithDialog .tabset li.horde-active {
    border: 1px solid #d0d0d0;
    border-bottom-width: 0;
    height: 21px;
}
.kronolithDialog hr {
   margin: 5px 0;
   height: 0;
   line-height: 0;
   border-width: 1px 0;
   border-color: #ccc transparent #fff;
   border-style: solid none;
}
.kronolithTabsOption hr {
    margin: 5px -5px;
}

.kronolithTabsOption {
    position: relative;
    line-height: 150%;
    border: 1px solid #d0d0d0;
    padding: 2px 5px;
}
#kronolithEventTabDescription,
#kronolithTaskTabDescription,
#kronolithCalendarinternalTabDescription,
#kronolithCalendartasklistsTabDescription,
#kronolithCalendarresourceTabDescription {
    border: 0;
    padding: 0;
}
#kronolithEventTabMap {
    padding: 0;
}
#kronolithEventTabExport div,
#kronolithEventTabRecur div,
#kronolithEventTabReminder div,
#kronolithTaskTabRecur div,
#kronolithTaskTabReminder div {
    margin-bottom: 0;
}
#kronolithEventDescription,
#kronolithTaskDescription,
#kronolithCalendarinternalDescription,
#kronolithCalendartasklistsDescription
#kronolithCalendarresourceDescription {
    padding: 0 1px;
}
/* ... */

